[tool.poetry]
name = "test-assignment"
version = "0.1.0"
description = ""
authors = ["Ainur Rakhmanov <ainur-205@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
